Fix mobile spacing, refs #17197

--- a/src/libguides/az_database/search_bar.css
+++ b/src/libguides/az_database/search_bar.css
@@ -66,10 +66,6 @@ button.s-lg-az-reset:hover {
   order: 2;
 }
 
-#az-public-mobile-filters-group-default {
-  margin-top: 12px;
-}
-
 #az-public-mobile-filters-collapse-default {
   display: block;
 }
